syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

service VoucherService {
  rpc Register(VoucherReq) returns (VoucherRes) {}
  // rpc Verify(VerifyReq) returns (VerifyRes) {}
}

message Error {
  int32 code = 1;
  string message = 2; 
}

message Voucher {
  int32 id = 1;
  string code = 2;
  float discount = 3;
  google.protobuf.Timestamp  start = 4;
  google.protobuf.Timestamp  end = 5;
}
// Neu da gan cho no mot gia tri la so = x, no never dc thay doi
message VoucherReq {
  string code = 1;
  float discount = 2;
  google.protobuf.Timestamp  start = 3;
  google.protobuf.Timestamp  end = 4;
}

message VoucherRes {
  Error error = 1;
  Voucher data = 2;
}